Fixed port in the listener

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
   # Proxy all requests to the destination
   server {
     include       nginx_params;
-    listen      $nginx_port default_server;
+    listen        80 default_server;
     # Proxy configuration
     proxy_redirect off;
     proxy_set_header Host $host;
