--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,11 @@ http {
     proxy_connect_timeout 90;
     proxy_buffers 32 4k;
     include       nginx_params;
+
+    location / {
+      proxy_pass http://$wsgi_host:$wsgi_port;
+    }
+
   }
   
   # Include other config files
